# Telenotes

./: class_dbconnector.h  contollerInfo.docx  dbconnector.hpp  dbconnector.pro  main.cpp  readme.txt  realisation_dbconnector.cpp
UML_Diagrams/: FirtsDiagramm.dia
server/: .gitignore  CMakeLists.txt  main.cpp
server/bd/: dbconnector.cpp  dbconnector.hpp
server/config_reader/: conf_reader.cpp  conf_reader.hpp
server/controll/: controller.cpp  controller.hpp  json.hpp
server/core/: connection.cpp  connection.hpp  queue.cpp  queue.hpp  server.cpp  server.hpp
server/reply/: mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp
server/request/: header.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp
server/static/: index.html
